@@ -2335,21 +2335,12 @@ _bfd_aarch64_create_or_find_stub_sec (asection *section,
 
   link_sec = htab->stub_group[section->id].link_sec;
   BFD_ASSERT (link_sec != NULL);
-  stub_sec = htab->stub_group[section->id].stub_sec;
-
+  stub_sec = htab->stub_group[link_sec->id].stub_sec;
   if (stub_sec == NULL)
     {
-      stub_sec = htab->stub_group[link_sec->id].stub_sec;
-      if (stub_sec == NULL)
-	{
-	  stub_sec = _bfd_aarch64_create_stub_section (link_sec, htab);
-	  if (stub_sec == NULL)
-	    return NULL;
-	  htab->stub_group[link_sec->id].stub_sec = stub_sec;
-	}
-      htab->stub_group[section->id].stub_sec = stub_sec;
+      stub_sec = _bfd_aarch64_create_stub_section (link_sec, htab);
+      htab->stub_group[link_sec->id].stub_sec = stub_sec;
     }
-
   return stub_sec;
 }
 
